complete header/navigation component

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Bandsite</title>
 </head>
 <body>
-    
+    <header class="topbar">
+        <div class="topbar__container">
+            <a class="topbar__back-to-home" href="./index.html"><img class="topbar__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <nav class="topbar__navigation">
+                <ul class="topbar__items">
+                    <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="#">Biography</a></li>
+                    <li class="topbar__item"><a  class="topbar__link" href="#">Shows</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
