--- a/index.html
+++ b/index.html
@@ -19,5 +19,53 @@
             </nav>
         </div>
     </header>
+
+    <footer class="contact">
+        <div class="contact__container">
+            <h2 class="contact__title">Get in Touch</h2>
+            <section class="contact__social">
+                <a class="contact__link" href="https://instagram.com/#"><img class="contact__icon contact__icon--instagram" src="./assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
+                <a class="contact__link" href="https://facebook.com/#"><img class="contact__icon contact__icon--facebook" src="./assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
+                <a class="contact__link" href="https://twitter.com/#"><img class="contact__icon contact__icon--twitter" src="./assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
+            </section>
+            <address class="contact__point">
+                <div class="contact__person">
+                    <span class="contact__name">Cam Adams</span>
+                    <span class="contact__company">The Bees Knees Management</span>
+                </div>
+                <div class="contact__location">
+                    <span class="contact__location-info">503 Broadway Penthouse,</span>
+                    <span class="contact__location-info">New York, NY 10012, USA</span>
+                </div>
+                <a class="contact__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+            </address>
+
+            <address class="contact__point">
+                <div class="contact__person">
+                    <span class="contact__name">Pearl Gregg</span>
+                    <span class="contact__company">Limitless Artist Group</span>
+                </div>
+                <div class="contact__location">
+                    <span class="contact__location-label">Booking Agent for</span>
+                    <span class="contact__location-info">US / South America / Japan</span>
+                </div>
+                <a class="contact__email" href="mailto:pearl.gregg@limitlessag.com">pearl.gregg@limitlessag.com</a>
+            </address>
+            <address class="contact__point">
+                <div class="contact__person">
+                    <span class="contact__name">Carson Whyte</span>
+                    <span class="contact__company">ARCH Entertainment</span>    
+                </div>
+                <div class="contact__location">
+                    <span class="contact__location-label">Booking Agent for</span>
+                    <span class="contact__location-info">UK / EU / AU</span>
+                </div>
+                <a class="contact__email" href="mailto:cwhyte@archentertainment.com">cwhyte@archentertainment.com</a>
+            </address>
+
+            <a class="contact__back-to-home" href="./index.html"><img class="contact__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <p class="contact__copyright">Copyright The Bees Knees &#169;   2021 All Rights Reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
