--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
             </nav>
         </div>
     </header>
-
+    <main>
+        <section class="hero">
+            <div class="hero__overlay">
+                <div class="hero__container">
+                    <h1 class="hero__title">The Bees Knees</h1>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="contact">
         <div class="contact__container">
             <h2 class="contact__title">Get in Touch</h2>
