--- a/index.html
+++ b/index.html
@@ -27,6 +27,33 @@
                 </div>
             </div>
         </section>
+        <section class="about">
+            <div class="about__container">
+                <h2 class="about__title">About the Musicians</h2>
+                <div class="about__content">
+                    <img class="about__image" src="./assets/images/band.jpg" alt="Live performance">
+                    <figure class="about__quotation">
+                        <blockquote>
+                            <p class="about__quote">
+                                &quot;We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board.&quot;
+                            </p>    
+                        </blockquote>
+                        <figcaption class="about__citation">
+                            - Bryan Teddy, lead vocalist of The Bees Knees
+                        </figcaption>    
+                    </figure>
+                    <div class="about__bio">
+                        <h3 class="about__sub-title">The Bees Knees</h3>
+                        <p class="about__text about__text--first">
+                            The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.
+                        </p>
+                        <p class="about__text">
+                            From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.
+                        </p>
+                    </div>    
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="contact">
         <div class="contact__container">
