Complete photo gallery component

--- a/index.html
+++ b/index.html
@@ -54,6 +54,40 @@
                 </div>
             </div>
         </section>
+        <section class="gallery">
+            <div class="gallery__container">
+                <h2 class="gallery__title">Photo Gallery</h2>
+                <ul class="gallery__items">
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-1.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-2.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-3.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-4.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-5.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-6.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-7.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-8.jpg" alt="happy people during band's performances">
+                    </li>
+                    <li class="gallery__item">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-9.jpg" alt="happy people during band's performances">
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="contact">
         <div class="contact__container">
