Fix space and font size inconsistencies

--- a/index.html
+++ b/index.html
@@ -99,35 +99,34 @@
             </section>
             <address class="contact__point">
                 <div class="contact__person">
-                    <span class="contact__name">Cam Adams</span>
-                    <span class="contact__company">The Bees Knees Management</span>
+                    <h4 class="contact__name">Cam Adams</h4>
+                    <h4 class="contact__company">The Bees Knees Management</h4>
                 </div>
                 <div class="contact__location">
-                    <span class="contact__location-info">503 Broadway Penthouse,</span>
-                    <span class="contact__location-info">New York, NY 10012, USA</span>
+                    <span class="contact__label">503 Broadway Penthouse,</span>
+                    <span class="contact__info">New York, NY 10012, USA</span>
                 </div>
                 <a class="contact__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
             </address>
-
             <address class="contact__point">
                 <div class="contact__person">
-                    <span class="contact__name">Pearl Gregg</span>
-                    <span class="contact__company">Limitless Artist Group</span>
+                    <h4 class="contact__name">Pearl Gregg</h4>
+                    <h4 class="contact__company">Limitless Artist Group</h4>
                 </div>
                 <div class="contact__location">
-                    <span class="contact__location-label">Booking Agent for</span>
-                    <span class="contact__location-info">US / South America / Japan</span>
+                    <span class="contact__label">Booking Agent for</span>
+                    <span class="contact__info">US / South America / Japan</span>
                 </div>
                 <a class="contact__email" href="mailto:pearl.gregg@limitlessag.com">pearl.gregg@limitlessag.com</a>
             </address>
             <address class="contact__point">
                 <div class="contact__person">
-                    <span class="contact__name">Carson Whyte</span>
-                    <span class="contact__company">ARCH Entertainment</span>    
+                    <h4 class="contact__name">Carson Whyte</h4>
+                    <h4 class="contact__company">ARCH Entertainment</h4>    
                 </div>
                 <div class="contact__location">
-                    <span class="contact__location-label">Booking Agent for</span>
-                    <span class="contact__location-info">UK / EU / AU</span>
+                    <span class="contact__label">Booking Agent for</span>
+                    <span class="contact__info">UK / EU / AU</span>
                 </div>
                 <a class="contact__email" href="mailto:cwhyte@archentertainment.com">cwhyte@archentertainment.com</a>
             </address>
