Setup header/footer components - shows page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/bio.css">
-    <title>Bandsite | BrainStation Sprint-1</title>
+    <title>Bandsite | Home | BrainStation Sprint-2</title>
 </head>
 <body>
     <header class="topbar">
@@ -14,7 +14,7 @@
             <nav class="topbar__navigation">
                 <ul class="topbar__items">
                     <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="#">Biography</a></li>
-                    <li class="topbar__item"><a  class="topbar__link" href="#">Shows</a></li>
+                    <li class="topbar__item"><a  class="topbar__link" href="./shows.html">Shows</a></li>
                 </ul>
             </nav>
         </div>
