--- a/shows.html
+++ b/shows.html
@@ -13,12 +13,27 @@
             <a class="topbar__back-to-home" href="./index.html"><img class="topbar__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <nav class="topbar__navigation">
                 <ul class="topbar__items">
-                    <li class="topbar__item"><a  class="topbar__link" href="#">Biography</a></li>
+                    <li class="topbar__item"><a  class="topbar__link" href="./index.html">Biography</a></li>
                     <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="./shows.html">Shows</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="hero__overlay">
+                <div class="hero__container">
+                    <div class="hero__content">
+                        <span class="hero__pretitle">Beautiful Beasts Album</span>                    
+                        <h1 class="hero__title">Queen of Yellow x For The Stings</h1>
+                        <div class="hero__player">
+                            <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/346653733&color=%23a85470&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"></iframe>
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="contact">
         <div class="contact__container">
             <h2 class="contact__title">Get in Touch</h2>
