--- a/shows.html
+++ b/shows.html
@@ -33,6 +33,13 @@
                 </div>
             </div>
         </section>
+        <section class="shows">
+            <div class="shows__container">
+                <h2 class="shows__title">Shows</h2>
+                <div class="shows__content">
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="contact">
         <div class="contact__container">
@@ -80,5 +87,7 @@
             <p class="contact__copyright">Copyright The Bees Knees &#169;   2021 All Rights Reserved</p>
         </div>
     </footer>
+
+    <script src="./scripts/build-shows-page.js"></script>
 </body>
 </html>
