Refactor/improve comments/shows components

--- a/shows.html
+++ b/shows.html
@@ -10,11 +10,11 @@
 <body>
     <header class="topbar">
         <div class="topbar__container">
-            <a class="topbar__back-to-home" href="./index.html"><img class="topbar__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="topbar__back-to-home" href="./"><img class="topbar__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <nav class="topbar__navigation">
                 <ul class="topbar__items">
-                    <li class="topbar__item"><a  class="topbar__link" href="./index.html">Biography</a></li>
-                    <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="./shows.html">Shows</a></li>
+                    <li class="topbar__item"><a  class="topbar__link" href="./">Biography</a></li>
+                    <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="">Shows</a></li>
                 </ul>
             </nav>
         </div>
@@ -33,13 +33,7 @@
                 </div>
             </div>
         </section>
-        <section class="shows">
-            <div class="shows__container">
-                <h2 class="shows__title">Shows</h2>
-                <div class="shows__content">
-                </div>
-            </div>
-        </section>
+        <section class="shows"></section>
     </main>
     <footer class="contact">
         <div class="contact__container">
@@ -88,6 +82,7 @@
         </div>
     </footer>
 
+    <script src="./scripts/utility-functions.js"></script>
     <script src="./scripts/build-shows-page.js"></script>
 </body>
 </html>
