--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header class="topbar">
         <div class="topbar__container">
-            <a class="topbar__back-to-home" href="./index.html"><img class="topbar__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="topbar__back-to-home" href="./"><img class="topbar__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <nav class="topbar__navigation">
                 <ul class="topbar__items">
-                    <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="#">Biography</a></li>
+                    <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="">Biography</a></li>
                     <li class="topbar__item"><a  class="topbar__link" href="./shows.html">Shows</a></li>
                 </ul>
             </nav>
@@ -161,6 +161,7 @@
         </div>
     </footer>
 
+    <script src="scripts/utility-functions.js"></script>
     <script src="scripts/index-page.js"></script>
 </body>
 </html>
