Complete - comment section - get/post to API

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <div class="contact__container">
             <h2 class="contact__title">Get in Touch</h2>
             <section class="contact__social">
-                <a class="contact__link" href="https://instagram.com/#"><img class="contact__icon contact__icon--instagram" src="./assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
-                <a class="contact__link" href="https://facebook.com/#"><img class="contact__icon contact__icon--facebook" src="./assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
-                <a class="contact__link" href="https://twitter.com/#"><img class="contact__icon contact__icon--twitter" src="./assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
+                <a class="contact__link" href="https://instagram.com/"><img class="contact__icon contact__icon--instagram" src="./assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
+                <a class="contact__link" href="https://facebook.com/"><img class="contact__icon contact__icon--facebook" src="./assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
+                <a class="contact__link" href="https://twitter.com/"><img class="contact__icon contact__icon--twitter" src="./assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
             </section>
             <address class="contact__point">
                 <div class="contact__person">
@@ -157,10 +157,11 @@
             </address>
 
             <a class="contact__back-to-home" href="./index.html"><img class="contact__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
-            <p class="contact__copyright">Copyright The Bees Knees &#169;   2021 All Rights Reserved</p>
+            <p class="contact__copyright">Copyright The Bees Knees &#169; 2021 All Rights Reserved</p>
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="scripts/utility-functions.js"></script>
     <script src="scripts/index-page.js"></script>
 </body>
