--- a/shows.html
+++ b/shows.html
@@ -83,7 +83,7 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./scripts/utility-functions.js"></script>
-    <script src="./scripts/build-shows-page.js"></script>
+    <!-- <script src="./scripts/utility-functions.js"></script> -->
+    <script type="module" src="./scripts/build-shows-page.js"></script>
 </body>
 </html>
